# stConnectivity

./: CMakeLists.txt  Makefile  README.md  commands  log.txt
GraphUtil/: check.sh  utility
Util/: Timer.cu  Timer.cuh  cudaUtil.cuh  fUtil.cuh  fUtil.h  fastQueue.h  printExt.h  readGraph.h  readGraphDegree.cpp  readUtil.cpp
Util/Conflict/: a.out  main.cpp
data/: check.sh  graph1.txt  graph2.txt  graph3.txt  graph4.txt  graph5.txt  prova.txt  roma.txt  roma1.txt
doc/: Algoritmi st-connectivity.txt  Lista_config.txt
include/cuda/: KernelStConnectivity.hpp  definition.cuh  graph.h  stConn.h  statistic.h
include/device/: definition.cuh
include/host/: graph.h  statistic.h
src/: stConnectivity.cpp  stConnectivity.hpp
src/cuda/: CacheFunc.cu  GlobalSync.cu  GlobalWrite.cu  KernelStConnectivity.hpp  KernelStConnectivity_WEfficient.cu  KernelStConnectivity_WEfficient.cuh  KernelStConnectivity_WEfficient.hpp  Kernel_BFS.cu  Kernel_STCONN.cu  Kernel_STCONN1.cu  Kernel_STCONN_OLD.cu  Kernel_StConnectivity.cu  STCONN_kernel_cores.cu  STCONN_kernels.cu  definition.cuh  graph.cpp  graph.hpp  main.cu  prefixSumAsm.cu  ptx.cu  stConn.cpp  stConnectivity.cu  stConnectivity.hpp  stConnectivity1.cu  stConnectivity_OLD.cu  statistic.cpp
src/device/: GlobalWrite.cu  S2M.cu  S2M_kernel_cores.cu  S2M_kernels.cu  main.cu  prefixSumAsm.cu  ptx.cu
src/host/: S2M.cpp  graph.cpp  statistic.cpp
src/seq/: stConnectivity.cpp  stConnectivity.hpp
utility/: utilitY.cpp
